--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>App</title>
+    <title>{{seoData.title}}</title>
+    <meta name="title" content="{{seoData.meta_title}}"/>
+    <meta name="description" content="{{seoData.meta_description}}"/>
+    <meta name="keywords" content="{{seoData.meta_keywords}}"/>
   </head>
   <body>
     {{ message }}
